--- a/Style/style.css
+++ b/Style/style.css
@@ -4,34 +4,49 @@ body {
     background: linear-gradient(90deg, rgba(252,252,255,1) 0%, rgba(77,9,121,1) 55%, rgba(0,212,255,1) 100%);
     background-size: cover;
 }
+.titulo {
+    font-family: 'Roboto', sans-serif;
+    font-size: 50px;
+    color: #fff;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
-header{
-   
+
+.item {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
-    font-weight: bold;
-
+    flex-direction: column;
+    background: rgba(255,255,255,0.5);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    padding: 20px;
 }
-section{
-    justify-content: left;
-    align-items: left;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+.lista {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: rgba(255,255,255,0.5);
+    border-radius: 5px;
+    padding: 40px;
+}
+h2 {
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
-    
+    color: #0c0c0c;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
-
-aside {
-    /*justify-content: right;
-    align-items: right;
-    float: right;*/
-    justify-content: left;
-    align-items: left;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    
+.grid_programacion {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5px;
+    margin: 10px;
+    padding: 10px;
 }
-
-
