--- a/Style/style.css
+++ b/Style/style.css
@@ -34,6 +34,7 @@ body {
     background: rgba(255,255,255,0.5);
     border-radius: 5px;
     padding: 40px;
+    margin: 20px;
 }
 h2 {
     font-family: 'Roboto', sans-serif;
@@ -49,4 +50,10 @@ h2 {
     grid-gap: 5px;
     margin: 10px;
     padding: 10px;
+}
+.lista img {
+    margin: 10px;
+    object-fit: scale-down;
+    width: 50px;
+     
 }
